prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific      
        backend:
          service:
            name: prometheus-service
            port:
              number: 8080
  # tls:
  # - hosts: 
  #   - prometheus.apps.shaker242.lab
  #   secretName: prometheus-secret
